--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo">
             <img src="assets/images/icon/icon-game-hub.png" alt="Game Hub Logo">
         </div>
-        <form class="login-form" action="home.html">
+        <form class="login-form" action=""/Game-hub/pages/home.html"">
             <h2>Login</h2>
             <div class="input-group">
                 <img src="assets/images/icon/icon-user.png" alt="User Icon">
